# distributed-inference-blueprint

./: .gitignore  Cargo.toml  README.md  test-modal-pipeline.py
.github/workflows/: release.yml
contracts/: foundry.toml  remappings.txt
contracts/cache/: solidity-files-cache.json
contracts/script/: RegisterBlueprint.s.sol
contracts/src/: DistributedInferenceBSM.sol
contracts/test/: DistributedInferenceBSM.t.sol
deploy/: register-blueprint.sh
metadata/: blueprint-metadata.json
operator/: Cargo.toml
operator/src/: config.rs  health.rs  lib.rs  main.rs  network.rs  pipeline.rs  qos.rs  server.rs  shard.rs
operator/tests/: e2e.rs  lifecycle.rs
